fix overflow on navbar

--- a/scss/core.scss
+++ b/scss/core.scss
@@ -111,7 +111,6 @@ ul, ol {
   animation: gradient-pos 9s linear 0s infinite forwards;
   background-size: 200% 100%;
   
-  overflow: hidden;
   border-radius: 0.5em;
   box-sizing: border-box;
   border: #363636 solid 0.1em;
